--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</li>
 						<li>
 							<span>mysql</span>, <span>postgresql</span>,
-							<span>mongodb</span>
+							<span>mongodb</span>, <span>redis</span>
 						</li>
 						<li>
 							<span>git</span>, <span>aws</span>,
@@ -149,7 +149,7 @@
 							<h4>
 								<a href="https://github.com/mozyonee/aspirex" target="_blank"><img
 										src="assets/images/github.svg" alt="github" height="18px" /></a>
-								<a href="https://aspirex.vercel.app" target="_blank">aspirex</a>
+								<a href="https://aspirex-theta.vercel.app" target="_blank">aspirex</a>
 							</h4>
 							<p>
 								tailwind, next.js, express.js, python, mysql
@@ -179,7 +179,7 @@
 								after effects saas
 							</h4>
 							<p>
-								tailwind, typescript, next.js, nestjs, mongodb, python
+								tailwind, typescript, next.js, nestjs, mongodb, redis, minio, python
 							</p>
 						</li>
 					</ul>
