--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<img src="assets/images/up.gif" alt="return" height="40px" class="close-main" />
 		<section>
 			<h2 class="close-main">vadym abakumov</h2>
-			<p>full stack developer</p>
+			<p>full stack engineer</p>
 			<p>2 years of commercial experience</p>
 			<p>stockholm, sweden</p>
 		</section>
