added some projects

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<section>
 			<h2 class="close-main">vadym abakumov</h2>
 			<p>full stack engineer</p>
-			<p>2 years of commercial experience</p>
+			<p>3 years of commercial experience</p>
 			<p>stockholm, sweden</p>
 		</section>
 		<hr />
@@ -35,7 +35,7 @@
 						</li>
 						<li>
 							<span>next.js</span>, <span>electron.js</span>,
-							<span>nestjs</span>
+							<span>nestjs</span>, <span>express.js</span>
 						</li>
 						<li>
 							<span>mysql</span>, <span>postgresql</span>,
@@ -105,24 +105,27 @@
 					<ul>
 						<li>
 							<h4>
-								<a href="https://github.com/mozyonee/blackjack" target="_blank"><img
-										src="assets/images/github.svg" alt="github" height="18px" /></a>
+								<a href="https://github.com/mozyonee/blackjack" target="_blank">
+									<img src="assets/images/github.svg" alt="github" height="18px" />
+								</a>
 								<a href="https://blackjack-mozy.vercel.app" target="_blank">blackjack</a>
 							</h4>
 							<p>html, css, javascript</p>
 						</li>
 						<li>
 							<h4>
-								<a href="https://github.com/mozyonee/skylume" target="_blank"><img
-										src="assets/images/github.svg" alt="github" height="18px" /></a>
+								<a href="https://github.com/mozyonee/skylume" target="_blank">
+									<img src="assets/images/github.svg" alt="github" height="18px" />
+								</a>
 								<a href="https://skylume.vercel.app" target="_blank">skylume</a>
 							</h4>
 							<p>html, css, javascript, php</p>
 						</li>
 						<li>
 							<h4>
-								<a href="https://github.com/mozyonee/pinball" target="_blank"><img
-										src="assets/images/github.svg" alt="github" height="18px" /></a>
+								<a href="https://github.com/mozyonee/pinball" target="_blank">
+									<img src="assets/images/github.svg" alt="github" height="18px" />
+								</a>
 								<a href="https://pinball-mozy.vercel.app" target="_blank">pinball</a>
 							</h4>
 							<p>tailwind.css, next.js</p>
@@ -147,8 +150,9 @@
 						</li>
 						<li>
 							<h4>
-								<a href="https://github.com/mozyonee/aspirex" target="_blank"><img
-										src="assets/images/github.svg" alt="github" height="18px" /></a>
+								<a href="https://github.com/mozyonee/aspirex" target="_blank">
+									<img src="assets/images/github.svg" alt="github" height="18px" />
+								</a>
 								<a href="https://aspirex-theta.vercel.app" target="_blank">aspirex</a>
 							</h4>
 							<p>
@@ -157,8 +161,9 @@
 						</li>
 						<li>
 							<h4>
-								<a href="https://github.com/mozyonee/forum" target="_blank"><img
-										src="assets/images/github.svg" alt="github" height="18px" /></a>
+								<a href="https://github.com/mozyonee/forum" target="_blank">
+									<img src="assets/images/github.svg" alt="github" height="18px" />
+								</a>
 								<a href="https://forum-mozy.vercel.app" target="_blank">forum</a>
 							</h4>
 							<p>
@@ -176,10 +181,23 @@
 						</li>
 						<li>
 							<h4>
-								after effects saas
+								<a href="https://creonix.io/en" target="_blank">creonix</a>
+
 							</h4>
 							<p>
-								tailwind, typescript, next.js, nestjs, mongodb, redis, minio, python
+								tailwind, typescript, next.js, nestjs, mongodb, redis, minio, python, extendscript, aws,
+								docker, k8s
+							</p>
+						</li>
+						<li>
+							<h4>
+								<a href="https://github.com/mozyonee/widgetable" target="_blank">
+									<img src="assets/images/github.svg" alt="github" height="18px" />
+								</a>
+								<a href="https://petlify.online" target="_blank">petlify</a>
+							</h4>
+							<p>
+								tailwind, typescript, next.js, nestjs, mongodb, minio, aws
 							</p>
 						</li>
 					</ul>
